[package]
name = "ram_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Memory",
    "Win32_Security"
]}
sysinfo = "0.30"
eframe = "0.28"
egui = "0.28"
egui_extras = { version = "0.28", features = ["image"] }