[package]
name = "ram_manager"
version = "1.0.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
description = "Advanced RAM Manager for Windows - Control process memory with precision"
license = "MIT"
repository = "https://github.com/yourusername/ram_manager"
keywords = ["ram", "memory", "windows", "process", "manager"]
categories = ["command-line-utilities", "os::windows-apis"]

[dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Memory",
    "Win32_Security"
]}
sysinfo = "0.30"
eframe = "0.28"
egui = "0.28"
egui_extras = { version = "0.28", features = ["image"] }

[profile.release]
opt-level = 3        # Maximum optimization
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
strip = true         # Remove debug symbols

[profile.dev]
opt-level = 1        # Some optimization in debug mode